<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Qbit DPC</string>
    <string name="setup_app_name">Set up Test DPC</string>
    <string name="cancel">Cancel</string>
    <string name="set_up_managed_profile">Set up managed profile</string>
    <string name="set_up_device_owner">Set up device owner</string>
    <string name="set_up_management_header">Set up management</string>
    <string name="setup_management_message">This app is currently not the owner of this device or
        profile. Please select an option below and tap Next to set up appropriate management by this app.</string>
    <string name="setup_management_message_for_do">This app is currently set as device owner. Please select the options below and tap Next to create a profile managed by the same app</string>
    <string name="provisioning_not_possible">TestDPC isn\'t currently allowed to be set up as the profile or device owner.</string>
    <string name="provisioning_not_possible_for_do">TestDPC isn\'t currently allowed to create a managed profile.</string>
    <string name="exit">Exit</string>
    <string name="managed_account_message">Added account that requires management:</string>
    <string name="managed_account_complete_message">Added account that is now managed:</string>
    <string name="account_migration_failed_message">Account failed to migrate:</string>
    <string name="add_account_later_message">Please add the account later.</string>
    <string name="setup_label">Set up</string>
    <string name="profile_name">Sample Managed Profile</string>
    <string name="skip_user_setup">Skip user setup</string>
    <string name="skip_user_consent">Skip user consent during provisioning</string>
    <string name="keep_account_migrated">Keep account on this user, if migrated</string>
    <string name="skip_encryption">Skip encryption</string>
    <string name="managed_profile_name">Sample Managed Profile</string>
    <string name="managed_user_name">Sample Managed User</string>
    <string name="finish_setup">Finish setup</string>
    <string name="finish_setup_account_not_ready">Finish setup but account might not be ready</string>
    <string name="setup_finished">Setup finished</string>
    <string name="click_finish_to_complete">Click Finish to complete setup.</string>
    <string name="waiting_for_first_account_check_in">Putting finishing touches</string>
    <string name="finish_button">Finish</string>
    <string name="all_done">Setup finished successfully</string>
    <string name="all_done_explanation_profile_owner">To manage the new managed profile, visit the
        badged version of this application.
    </string>
    <string name="all_done_explanation_device_owner">To manage the device open this application.
    </string>
    <string name="add_account_title">Provisioning finished successfully</string>
    <string name="add_account_explanation">To add an account, select the corresponding option below. Select skip if you want to add it later:
    </string>
    <string name="add_account">Add account</string>
    <string name="add_account_with_name">Add account with name</string>
    <string name="add_account_skip">Skip</string>
    <string name="add_account_dialog_title">Account name:</string>
    <string name="fail_to_add_account">Failed to add account</string>
    <string name="remove_account">Remove account</string>
    <string name="success_remove_account">Account removed: %s</string>
    <string name="fail_to_remove_account">Failed to remove account: %s</string>
    <string name="no_accounts_available">No accounts available.</string>
    <string name="icon">Icon</string>
    <string name="manage_apps">Manage applications</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="migration_not_supported">Unable to migrate account into profile</string>
    <string name="provisioning_not_supported">Device provisioning is not enabled</string>
    <string name="provisioning_failed_or_cancelled">Provisioning failed or cancelled</string>
    <string name="provisioning_params_title">Select provisioning parameters</string>
    <string name="provisioning_params_color">Color: </string>
    <string name="provisioning_params_logo">Logo: </string>
    <string name="provisioning_params_select">Select</string>
    <string name="error_opening_image_file">Error opening image file</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="work_profile">Work profile</string>
    <string name="personal_profile">Personal profile</string>
    <string name="managed_profile_specific_policy_category_title">Managed profile policies</string>
    <string name="managed_profile_specific_policy_title">Managed work profile specific policies
    </string>
    <string name="policies_management">Policy management</string>
    <string name="other_owner_already_setup_error">There is already a device/profile owner, cannot
        start TestDPC</string>
    <string name="invalid_launch_intent_no_account">No account found on incoming intent</string>
    <string name="device_admin_receiver_failure">Failed to become device/profile owner</string>
    <string name="menu_search_title">Search</string>
    <string name="requires_android_api_level">Requires API level
        <xliff:g id="api level">%d</xliff:g></string>
    <string name="requires_android_v">Requires API level 35</string>
    <string name="requires_preview_release">Requires the Android P preview release</string>
    <string name="requires">Requires\u0020</string>
    <string name="requires_delimiter">,\u0020</string>
    <string name="requires_or">\u0020or\u0020</string>
    <string name="device_owner">device owner</string>
    <string name="org_owned_profile_owner">organization-owned profile owner</string>
    <string name="profile_owner">profile owner</string>
    <string name="primary_user">primary user</string>
    <string name="secondary_user">secondary user</string>
    <string name="managed_profile">managed profile</string>
    <string name="requires_device_owner">Requires device owner</string>
    <string name="requires_profile_owner_organization_owned_device">Requires profile owner of an organization owned device</string>
    <string name="requires_device_owner_or_profile_owner_organization_owned_device">Requires device owner or profile owner of an organization owned device</string>
    <string name="requires_device_owner_or_delegation_network_logging">Requires device owner or delegation-network-logging</string>
    <string name="requires_device_owner_or_delegation_security_logging">Requires device owner or delegation-security-logging</string>
    <string name="not_for_parent_profile">Not applicable to parent profile</string>
    <string name="deprecated_since_oreo">Deprecated since Android Oreo</string>
    <string name="user_restricted">Disallowed by user restriction</string>
    <string name="requires_network_logs">Requires network logging to be enabled</string>
    <string name="requires_security_logs">Requires security logging to be enabled</string>
    <string name="not_for_password_quality">Not applicable to current password quality</string>
    <string name="this_is_a_device_owner">This app is the device owner.</string>
    <string name="this_is_a_profile_owner">This app is a profile owner.</string>
    <string name="this_is_an_org_owned_profile_owner">This app is a profile owner of an organization-owned device.</string>
    <string name="this_is_a_delegated_app">This app has delegated permissions.</string>
    <string name="this_is_a_role_holder">This app is the Device Management Role Holder.</string>
    <string name="this_is_not_an_admin">This app is not an admin.</string>
    <string name="default_disclaimer_company_name">TestDPC Company</string>
    <string name="default_disclaimer_emm_name">TestDPC EMM</string>
    <string name="device_owner_management">Device owner management</string>
    <string name="set_auto_time_required">Set auto (network) time required</string>
    <string name="set_auto_time">Set auto (network) time</string>
    <string name="set_auto_time_zone">Set auto (network) time zone</string>
    <string name="remove_device_owner">Remove this device owner</string>
    <string name="remove_device_owner_title">Remove device owner?</string>
    <string name="remove_device_owner_confirmation">Policies and restrictions will continue to be
        active and may require a factory reset to clear.</string>
    <string name="device_owner_removed">This app is no longer a device owner.</string>
    <string name="set_factory_reset_protection_policy">Set factory reset protection policy</string>
    <string name="factory_reset_protection_policy">Factory reset protection policy</string>
    <string name="factory_reset_protection_policy_accounts">Account IDs</string>
    <string name="factory_reset_protection_policy_account_id_msg">Account IDs are exactly 21 decimal digits</string>
    <string name="factory_reset_protection_policy_enabled">Enabled</string>
    <string-array name="factory_reset_protection_policy_enabled_choices">
        <item>Disabled</item>
        <item>Enabled</item>
    </string-array>
    <string name="cleared_factory_reset_protection_policy">Cleared factory reset protection policy</string>
    <string name="saved_factory_reset_protection_policy">Saved factory reset protection policy</string>
    <string name="data_wipe_section">Data wipe</string>
    <string name="remove_managed_profile">Remove work profile</string>
    <string name="remove_managed_profile_title">Remove work profile?</string>
    <string name="wipe_data_confirmation">Are you sure you want to wipe the data?</string>
    <string name="wipe_data_include">Also wipe:</string>
    <string name="external_storage">External storage</string>
    <string name="reset_protection_data">Factory reset protection</string>
    <string name="factory_reset_device">Factory reset device</string>
    <string name="factory_reset_device_title">Factory reset device?</string>
    <string name="reboot">Reboot device</string>
    <string name="reboot_error_msg">Cannot reboot device during an ongoing call.</string>
    <string name="cross_profile_intents">Cross-profile intents</string>
    <string name="add_cross_profile_intents_title">Add cross-profile intents</string>
    <string name="clear_cross_profile_intents">Clear all cross-profile intents</string>
    <string name="actions_title">Actions:</string>
    <string name="categories_title">Categories:</string>
    <string name="data_schemes_title">Schemes:</string>
    <string name="lite_title">Qbit DPC (Lite)</string>
    <string name="lite_device_id_label">Device ID</string>
    <string name="lite_enrol_token_label">Enrol token</string>
    <string name="lite_enrol_button">Enrol</string>
    <string name="lite_enrol_all_button">Enrol All</string>
    <string name="lite_refresh_button">Refresh</string>
    <string name="lite_sync_button">Sync now</string>
    <string name="tailscale_config_button">Set Tailscale config</string>
    <string name="refresh_extras_button">Refresh provisioning extras</string>
    <string name="mqtt_refresh_button">Refresh MQTT credentials</string>
    <string name="mqtt_section_title">Lite MQTT client (WSS)</string>
    <string name="mqtt_host">MQTT host</string>
    <string name="mqtt_port">MQTT port</string>
    <string name="mqtt_path">MQTT path</string>
    <string name="mqtt_user">MQTT username</string>
    <string name="mqtt_pass">MQTT password</string>
    <string name="mqtt_qid">MQTT qid</string>
    <string name="mqtt_client_id">MQTT clientId</string>
    <string name="mqtt_tls">TLS enabled</string>
    <string name="mqtt_edit_toggle">Enable editing</string>
    <string name="mqtt_start">Start</string>
    <string name="mqtt_stop">Stop</string>
    <string name="mqtt_status_placeholder">MQTT status</string>
</resources>